--- a/style.css
+++ b/style.css
@@ -2,123 +2,156 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+
 }
+
 body{
-    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    font-family: "poppins" , sans-serif;
 }
-.header{
-    padding: 20px;
-    background-color: #f63232;
-    text-align: center;
+
+header{
     position: fixed;
+    padding: 20px;
+    margin:0 auto;
+    background-color: #f63232;
     width: 100%;
     z-index: 1;
     display: flex;
+    align-items: center;
     justify-content: center;
 }
-.header-title {
+
+header h1{
+    text-align:center;
     color: white;
-    border: 8px solid white;
-    border-radius: 36px;
-    padding: 6px 12px;
+    display: inline-block;
+    border: 8px solid #fff;
+    padding:6px 12px;
+    border-radius :36px;
 }
-.picture_main{
-    position: relative;
+
+.first-block{
+    position:relative;
 }
-.picture {
+
+.first-block img{
     width: 100%;
     max-width: 100%;
 }
-.message {
+
+.first-block h2{
+    font-size: 70px;
+}
+
+.welcome{
     position: absolute;
     top: 40%;
     left: 0;
     background-color: #f63232;
-    color: white;
+    color: #fff;
     padding: 30px;
 }
-.picture-text {
-    font-size: 40px;
+
+.welcome h2{
+    margin-bottom: 1rem;
 }
-.picture-text span {
-    font-size: 1.2em;
-}
-.nav {
+
+
+nav{
     background-color: #f4f4f4;
-    padding: 24px;
-    position: sticky;
-    top: 100px;
+   padding: 24px;
+   position: sticky;
+   top: 100px;
 }
-.nav-list {
-    white-space: nowrap;
+
+.nav-block ul{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     max-width: 1200px;
     margin: 0 auto;
+    white-space: nowrap;
 }
-.item_nav {
-    display: inline-block;
-    width: 25%;
-    font-size: 24px;
+
+.nav-block ul li{
+    life-style-type: none;
 }
-.links_nav {
+
+.nav-block ul li a{
     text-decoration: none;
     color: #4b4b4b;
 }
-.links_nav:hover {
-    text-decoration: underline;
-    color: #4b4b4b;
+
+.nav-block li{
+    display: inline-block;
+    width: 25%;
+    font-size: 24px;
+    
 }
-.signup {
-    color: #f63232;
+
+.nav-block li a:hover{
+    text-decoration:underline;
 }
-.signup:hover{
-    text-decoration: underline;
-    color: #f63232;
-}
-.main{
+
+main{
     max-width: 100%;
-    margin: 80px 10px;
+    margin: 40px 10px;
 }
-.header_main{
+
+article h2{
     color: #f63232;
     font-size: 48px;
     text-align: center;
 }
-.main_text {
+
+article p{
     line-height: 25px;
     text-align: center;
     width: 60%;
     margin: 20px auto 0;
 }
-.main_text::first-line {
-    font-size: 20px;
+
+article p::first-line{
     font-weight: bold;
+    font-size: 25px;
+
 }
+
 .images{
+    display: flex;
     margin: 10px;
     text-align: center;
 }
-.game_ad{
+
+.images li{
     display: inline-block;
     width: 20%;
     margin: 60px 5%;
 }
-.contact-us{
+
+.images li img{
+    max-width: 100%;
+}
+.error-prompt{
+    color: #f63232;
+    display:none;
+}
+
+.details{
     background-color: #f4f4f4;
     text-align: center;
     padding: 60px 20px;
     color: #4b4b4b;
 }
-.contact-header {
-    font-size: 36px;
+
+.details h2{
+    font-size: 40px;
 }
-.contact-text {
+.details p{
     margin-top: 10px;
 }
-.error-message {
-    color: red;
-    display: none;
-}
-.forms {
+
+.details form{
     display: flex;
     flex-direction: column;
     width: 400px;
@@ -127,11 +160,11 @@ body{
 form input{
     margin: 10px 0;
     padding: 10px 20px;
-    font-size: 16px;
     border: 4px solid white;
+    font-size: 16px;
     border-radius: 28px;
 }
-.btn {
+.submission{
     background-color: #f63232;
     border: none;
     border-radius: 50px;
@@ -142,68 +175,151 @@ form input{
     font-size: 20px;
     cursor: pointer;
 }
-.footer{
-    background-color: #f63232 ;
-    color: white;
-    padding: 20px;
+footer{
+    background-color: #f63232;
+    color: #fff;
     text-align: center;
+    padding: 20px;
+    font-family:'poppins',sans-serif;
 }
 
-@media screen and (max-width: 412px) {
-    *{
-        margin: 0px;
-        padding: 0px;
+
+@media screen and (max-width: 850px) {
+    .nav-block ul{
+       gap: 5opx;
     }
-    body{
-        width: 100%;
-    }
-    .header{
-        position: static;
-    }
-    .picture_main{
-        position: static;
-    }
-    .nav{
-        position: static;
-    }
-    .item_nav{
-        display: block;
-        font-size: large;
-    }
-    .message{
-        position: static;
-        text-align: center;
-        background-color: #f63232;
-        color: white;
-        padding: 10px;
-        width: 100%;
-    }
-    .picture-text br{
-        display: none;
-    }
-    .picture-text {
-        font-size: 20px;
-    }
-    
-    .picture-text span{
-        font-size: 1.2em;
-    }
-    .images{
-        /* margin: 10px; */
-        text-align: center;
-        margin: 0px;
-    }
-    .game_ad{
-        display: block;
-        margin: 14px 0;
-        width: 100%;
-    }
-    .main{
-        margin: 50px 20px;
-    }
-    .forms {
-        width: 310px;
-        margin: 0 auto;
-        width: 100%;
+
+    .nav-block a {
+    text-decoration: none;
+    color: #4b4b4b;
+    font-size: 20px;
     }
 }
+
+@media screen and (min-width:360px) and (max-width:600px) {
+    .welcome h2{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .welcome{
+        position: static;
+    }
+    .first-block h2{
+        font-size: 20px;
+    }
+
+    .nav-block ul{
+        flex-direction: column;
+        gap: 2px;
+        align-items: flex-start;
+    }
+    .nav-block{
+        position: static;
+    }
+
+    .images{
+        flex-direction: column;
+        align-items: center;
+
+    }
+    .images li{
+        display: inline-block;
+        width: 50%;
+        margin: 0px 5%;
+    }
+
+    .submission{
+        margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    }
+    @media screen and (max-width: 500px) {
+        * {
+            margin: 0px;
+            padding: 0px;
+        }
+    
+        body {
+            width: 100%;
+        }
+    
+        header {
+            position: static;
+        }
+    
+        .first-block {
+            position: static;
+        }
+    
+        nav {
+            position: static;
+        }
+    
+        nav li {
+            display: block;
+            font-size: large;
+        }
+    
+        .first-block .welcome {
+            position: static;
+            text-align: center;
+            background-color: #f63232;
+            color: white;
+            padding: 10px;
+            width: 100%;
+        }
+    
+    
+        .welcome h2{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 5px;
+        }
+    
+        .first-block .welcome br {
+            display: none;
+        }
+    
+        .first-block h2 {
+            font-size: 20px;
+        }
+    
+        .first-block h2 span {
+            font-size: 1.2em;
+        }
+    
+        .images {
+            text-align: center;
+            margin: 0px;
+        }
+    
+        .images li {
+            display: block;
+            margin: 0;
+            width: 100%;
+        }
+    
+        .images li img {
+            max-width: 80%;
+        }
+    
+        main {
+            margin-top: 50px;
+            margin-bottom: 50px;
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+    
+        form {
+            width: 310px;
+            margin: 0 auto;
+        }
+    }
+
+    
