--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ article p::first-line{
 .images li img{
     max-width: 100%;
 }
-.error-prompt{
+.errorPrompt{
     color: #f63232;
     display:none;
 }
